@@ -28,24 +28,19 @@
                           (or (getenv "EMACS_TEST_DIRECTORY")
                               "../../"))))
 
-(defun exif-elem (exif elem)
-  (plist-get (seq-find (lambda (e)
-                         (eq elem (plist-get e :tag-name)))
-                       exif)
-             :value))
-
 (ert-deftest test-exif-parse ()
   (let ((exif (exif-parse-file (test-image-file "black.jpg"))))
-    (should (equal (exif-elem exif 'make) "Panasonic"))
-    (should (equal (exif-elem exif 'orientation) 1))
-    (should (equal (exif-elem exif 'x-resolution) '(180 . 1)))))
+    (should (equal (exif-field 'make exif) "Panasonic"))
+    (should (equal (exif-field 'orientation exif) 1))
+    (should (equal (exif-field 'x-resolution exif) '(180 . 1)))
+    (should (equal (exif-field 'date-time exif) "2019:09:21 16:22:13"))))
 
 (ert-deftest test-exif-parse-short ()
   (let ((exif (exif-parse-file (test-image-file "black-short.jpg"))))
-    (should (equal (exif-elem exif 'make) "thr"))
-    (should (equal (exif-elem exif 'model) "four"))
-    (should (equal (exif-elem exif 'software) "em"))
-    (should (equal (exif-elem exif 'artist) "z"))))
+    (should (equal (exif-field 'make exif) "thr"))
+    (should (equal (exif-field 'model exif) "four"))
+    (should (equal (exif-field 'software exif) "em"))
+    (should (equal (exif-field 'artist exif) "z"))))
 
 (ert-deftest test-exit-direct-ascii-value ()
   (should (equal (exif--direct-ascii-value 28005 2 t) (string ?e ?m 0)))
